[tool.poetry]
name = "dipalda"
version = "0.1.0"
description = ""
authors = ["Maja <mschneider@informatik.uni-leipzig.de>"]
readme = "README.md"
packages = [{include = "dipalda"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
osmnx = "^1.5.1"
postgres = "^4.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.18"
geoalchemy2 = "^0.14.0"
pyqtree = "^1.0.0"
folium = "^0.14.0"
eurostat = "^1.0.4"
setuptools = "^68.0.0"
geodatasets = "^2023.3.0"
geographiclib = "^2.0"
geopy = "^2.4.0"
contextily = "^1.4.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
